[package]
name = "llama2_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.3.23", features = ["cargo", "derive"] }
memmap2 = "0.7.1"
ndarray = { version = "0.15.0", features = ["rayon"] }
ndarray-stats = "0.5.1"
rayon = "1.7"
